test/tests/RangeForLoopExplicitRangeNullable.expected
RangeForLoopExplicitRangeNullable.panda:3:14: error: expected 'panda.core.Range<panda.core.Int64>', but found 'panda.core.Range<panda.core.Int64?>'
1 error
