test/tests/RangeForLoopExplicitRangeNullable.panda
method main() {
    def range := Range<Int?>(1, 10, true)
    for i in range {
        Console.printLine(range)
    }
}
